add more descriptions

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Shucheng Li"
-description              : "Shucheng Li's Portfolio"
+description              : "A passionate undergraduate researcher in computational cognitive science"
 repository               : "Catalinaisacat/catalinaisacat.github.io"
 google_scholar_stats_use_cdn : False
 
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : Catalinaisacat# e.g., "github username"
+  github           : 
   google_plus      :
   keybase          :
   instagram        :
