--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,3 +11,6 @@ main:
 
   - title: "Beyond Academics"
     url: "/#-beyond-academics"
+
+  - title: "CV"
+    ucl: "https://www.overleaf.com/read/yynsfmvxhrhx#8247fd"
