--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,5 +12,6 @@ main:
   - title: "Beyond Academics"
     url: "/#-beyond-academics"
 
+other:
   - title: "CV"
     ucl: "https://www.overleaf.com/read/yynsfmvxhrhx#8247fd"
