--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,4 +14,4 @@ main:
 
 other:
   - title: "CV"
-    ucl: "https://www.overleaf.com/read/yynsfmvxhrhx#8247fd"
+    url: "https://www.overleaf.com/read/yynsfmvxhrhx#8247fd"
